oss信息数据库操作
